# instana-aws-blog-repo

./: README.md
Bedrock-Capitec/: .env  README.md  pyproject.toml
Bedrock-using-litellm/: README.md  main.py  pyproject.toml
aws-bedrock-agent-demo/: bedrock-demo.py
bedrock-demo-102725/: README.md  main.py  pyproject.toml
