[project]
name = "bedrock-capitec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3==1.40.58",
    "botocore==1.40.58",
    "httpx==0.28.1",
    "python-dotenv>=1.2.1",
    "requests==2.32.5",
    "traceloop-sdk==0.51.1",
]
